--- a/project.html
+++ b/project.html
@@ -37,7 +37,7 @@
                     <span class="icon-bar bar3"></span>
                 </button>
                 <a href="index.html" class="navbar-brand">
-                    SIG UPGRIS
+                    SIG UPGRIS 2021
                 </b></a>
             </div>
             <div class="collapse navbar-collapse">
